apply plugin: 'application' // Adds the 'run' task. (Implicitly applies plugin 'java')

sourceCompatibility = 1.8

// Where to obtain the project's dependencies from
repositories {
    // Alternatively: mavenCentral()
    jcenter()
}

mainClassName = "net.bettyluke.tracinstant.TracInstantApp"
applicationDefaultJvmArgs = [
    "-Xms8M",
    "-Xmx300M",
    "-Dsun.java2d.d3d=false",
    "-Xverify:none",
    "-XX:StringTableSize=60013"
]

// Defines the dependencies for production and test code
dependencies {

	compile 'au.com.bytecode:opencsv:2.4'

	// TODO: Would surely help code quality. Find out how to compact with proguard or something.
	// compile 'com.google.guava', version: '21.0'

    // TODO: add first unit test! :o)
    // testCompile 'junit:junit:4.12'
}
